Added links to detroit pizza + vegan waffle recipe

--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+
+    <ul>
+        <li><a href="./recipes/blondies.html">Blondies</a></li>
+        <li><a href="./recipes/detroit_pizza.html">Detroit style pizza</a></li>
+        <li><a href="./recipes/vegan_waffles.html">Vegan waffles</a></li>
+
+    </ul>
+
 </body>
+
 </html>
