Spelling and grammar

--- a/recipes/blondies.html
+++ b/recipes/blondies.html
@@ -27,16 +27,16 @@
     </ul>
 
     <ol>
-        <li>Melt butter in a large mixing bowl</li>
+        <li>Melt the butter in a large mixing bowl</li>
         <li>Mix brown sugar with melted butter</li>
-        <li>Whisk beaten eggs into the butter and brown sugar</li>
-        <li>Add vanilla into butter, egg, and brown sugar mix</li>
-        <li>Mix baking powder, salt and flour in a separate bowl</li>
-        <li>Fold dry ingredients into the wet ingredients, be careful to not over mix</li>
+        <li>Whisk the beaten eggs into the butter and brown sugar</li>
+        <li>Add vanilla to the butter, egg, and brown sugar mix</li>
+        <li>Mix the baking powder, salt and flour in a separate bowl</li>
+        <li>Fold the dry ingredients into the wet ingredients. Be careful not to over mix</li>
         <li>Fold in chocolate chips</li>
         <li>Line a 9x13 inch pan with foil and lightly spray with cooking oil</li>
         <li>Evenly spread batter into pan</li>
-        <li>Cook for 22-25 minutes or until surface is a light golden brown</li>
+        <li>Cook for 22-25 minutes or until the surface is a light golden brown</li>
     </ol>
 
     <h3><a href="../index.html">Home</a></h3>
