--- a/recipes/detroit_pizza.html
+++ b/recipes/detroit_pizza.html
@@ -37,14 +37,16 @@
         <li>Mix warm water in a mixer with yeast and sugar</li>
         <li>Add 2 t olive oil, salt, and bread flour</li>
         <li>Knead with a dough hook until smooth, soft, and elastic</li>
-        <li>Pour remaining 1 t of olive oil into a 10x14 inch rectagular deep dish pan</li>
-        <li>Put dough in pan , oil fingers, and pull dough to the edges of the pan</li>
-        <li>Cover dough for a hour and leave it in room warm-room temp space</li>
+        <li>Pour the remaining 1 t of olive oil into a 10x14 inch rectagular deep dish pan</li>
+        <li>Put the dough in the pan , oil your fingers, and pull the dough to the edges of the pan
+        </li>
+        <li>Cover the dough for an hour and leave it in room a warm space</li>
         <li>Shredd cheeses</li>
-        <li>After the hour is up pull dough to edge of pan, leaving about a half inch of space around the sides</li>
-        <li>Put half of pepperoni on dough, followed by cheese, rest of pepperoni, and finally put 3 stripes of sause long ways across the pizza</li>
+        <li>After the time is up pull the dough the edge of the pan, leaving about a half inch of space around the sides</li>
+        <li>Put half of pepperoni on the dough, followed by cheese, than the rest of pepperoni, and finally put 3 stripes of sauce long ways across the pizza
+        </li>
         <li>Bake for about 15 minutes or until golden brown and let cool for 5 mintues</li>
-        <li>Carefully lift pizza out of pan with spatulla on to cutting board</li>
+        <li>Carefully lift the pizza out of the pan with a spatula on a cutting board</li>
     </ol>
 
     <h3><a href="../index.html">Home</a></h3>
