--- a/recipes/vegan_waffles.html
+++ b/recipes/vegan_waffles.html
@@ -13,8 +13,7 @@
 
     <h3>Vegan waffles with strawberries and blue berries</h3>
 
-    <p>Every one loves waffles. These waffles are so good I make them all the time for non-vegan people and they are none the wiser.
-       You they are best with fresh fruit.</p>
+    <p>These are the BEST Vegan Waffles! They are crispy, so fluffy, and very simple with only pantry ingredients!</p>
 
     <ul>
         <li>6 T water</li>
@@ -31,13 +30,13 @@
     </ul>
 
     <ol>
-        <li>Preheat waffle maker</li>
-        <li>Stir water and flax seed meal together in bowl</li>
-        <li>Blend oast in a blender into a flour-like consistency. .</li>
+        <li>Preheat your waffle maker</li>
+        <li>Stir water and flax seed meal together in a bowl</li>
+        <li>Blend oats in a blender into a flour-like consistency. .</li>
         <li>Add flax seed mixture, soy milk, all-purpose flour, whole wheat flour, canola oil, baking powder, vanilla extract, agave nectar, and salt to oats</li>
-        <li>Blend until batter is just mixed</li>
+        <li>Blend until the batter is slightly lumpy</li>
     </ol>
-    
+
     <h3><a href="../index.html">Home</a></h3>
 </body>
 </html>
